--- a/templates/index/footer.twig
+++ b/templates/index/footer.twig
@@ -1,7 +1,7 @@
 <div class="modal fade " id="cookiePolicyModal" tabindex="-1" aria-labelledby="cookiePolicyModalLabel" aria-hidden="true">
 
 	<div class="modal-dialog">
-		<div class="modal-content bg-dark">
+		<div class="modal-content bg-black">
 			<div class="modal-header">
 				<h1 class="modal-title fs-5" id="cookiePolicyModalLabel">Cookie Policy</h1>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -16,7 +16,7 @@
 	</div>
 </div>
 
-<div class="{{bg ?? 'bg-accent-dark'}}">
+<div class="{{bg ?? 'bg-black'}}">
 
 <footer class="sin-up-div bg-dark text-white text-center p-5" style="min-height: 20vh;">
 	<p>&copy; 2024 . All Rights Reserved.</p>
