--- a/templates/EventLoading/create_Project.twig
+++ b/templates/EventLoading/create_Project.twig
@@ -11,8 +11,9 @@
 {{ form_row(projectForm.mileStone) }}
 
 <div class="d-flex justify-content-center my-2">
-	<button class="btn btn-primary" type="button" onclick="submitForm('{{path('project_new')}}', 'projectForm', {{projectcur.id}})">Create</button>
+	<button class="btn btn-primary" type="button" onclick="submitForm('{{path('project_new')}}', 'projectForm', '{{ asset('loadgif.gif') }}', {{projectcur.id}})">Create</button>
 </div>
 
 
 {{ form_end(projectForm) }}
+
