--- a/templates/projectDetail.twig
+++ b/templates/projectDetail.twig
@@ -14,16 +14,125 @@
 {% endblock %}
 
 {% block body %}
+	
 	<hr>
 	<div class="mx-3">
 		<div class="card bg-dark">
 			<div class="card-header text-center bg-main-dark">
-				<h3>{{ project.name }}</h3>
+				<h3>{{ project.name }} --</h3>
 			</div>
 			<div class="card-body bg-dark d-flex justify-content-center align-items-center" style="overflow: hidden;">
 				<div>
 					{{ project.fileref|raw }}
 				</div>
+
+				<div id="my-keen-slider" class="keen-slider">
+					<div class="keen-slider__slide number-slide1">1</div>
+					<div class="keen-slider__slide number-slide2">2</div>
+					<div class="keen-slider__slide number-slide3">3</div>
+					<div class="keen-slider__slide number-slide4">4</div>
+					<div class="keen-slider__slide number-slide5">5</div>
+					<div class="keen-slider__slide number-slide6">6</div>
+				</div>
+				
+				<script>
+					function navigation(slider) {
+						let wrapper, dots, arrowLeft, arrowRight
+
+						function markup(remove) {
+							wrapperMarkup(remove)
+							dotMarkup(remove)
+							arrowMarkup(remove)
+						}
+
+						function removeElement(elment) {
+							elment.parentNode.removeChild(elment)
+						}
+						function createDiv(className) {
+							var div = document.createElement("div")
+							var classNames = className.split(" ")
+							classNames.forEach((name) => div.classList.add(name))
+							return div
+						}
+
+						function arrowMarkup(remove) {
+							if (remove) {
+							removeElement(arrowLeft)
+							removeElement(arrowRight)
+							return
+							}
+							arrowLeft = createDiv("arrow arrow--left")
+							arrowLeft.addEventListener("click", () => slider.prev())
+							arrowRight = createDiv("arrow arrow--right")
+							arrowRight.addEventListener("click", () => slider.next())
+
+							wrapper.appendChild(arrowLeft)
+							wrapper.appendChild(arrowRight)
+						}
+
+						function wrapperMarkup(remove) {
+							if (remove) {
+							var parent = wrapper.parentNode
+							while (wrapper.firstChild)
+								parent.insertBefore(wrapper.firstChild, wrapper)
+							removeElement(wrapper)
+							return
+							}
+							wrapper = createDiv("navigation-wrapper")
+							slider.container.parentNode.appendChild(wrapper)
+							wrapper.appendChild(slider.container)
+						}
+
+						function dotMarkup(remove) {
+							if (remove) {
+							removeElement(dots)
+							return
+							}
+							dots = createDiv("dots")
+							slider.track.details.slides.forEach((_e, idx) => {
+							var dot = createDiv("dot")
+							dot.addEventListener("click", () => slider.moveToIdx(idx))
+							dots.appendChild(dot)
+							})
+							wrapper.appendChild(dots)
+						}
+
+						function updateClasses() {
+							var slide = slider.track.details.rel
+							slide === 0
+							? arrowLeft.classList.add("arrow--disabled")
+							: arrowLeft.classList.remove("arrow--disabled")
+							slide === slider.track.details.slides.length - 1
+							? arrowRight.classList.add("arrow--disabled")
+							: arrowRight.classList.remove("arrow--disabled")
+							Array.from(dots.children).forEach(function (dot, idx) {
+							idx === slide
+								? dot.classList.add("dot--active")
+								: dot.classList.remove("dot--active")
+							})
+						}
+
+						slider.on("created", () => {
+							markup()
+							updateClasses()
+						})
+						slider.on("optionsChanged", () => {
+							console.log(2)
+							markup(true)
+							markup()
+							updateClasses()
+						})
+						slider.on("slideChanged", () => {
+							updateClasses()
+						})
+						slider.on("destroyed", () => {
+							markup(true)
+						})
+					}
+
+					var slider = new KeenSlider("#my-keen-slider", {loop: true}, [navigation]);
+
+				</script>
 			</div>
 		</div>
 
