--- a/templates/index/footer.twig
+++ b/templates/index/footer.twig
@@ -16,9 +16,9 @@
 	</div>
 </div>
 
-<div class="{{bg ?? 'bg-black'}}">
+<div class="{{bg ?? 'bg-transparent'}}">
 
-<footer class="sin-up-div bg-dark text-white text-center p-5" style="min-height: 20vh;">
+<footer class="sin-up-div bg-dark text-white text-center p-5 bottom-0" style="min-height: 20vh;">
 	<p>&copy; 2024 . All Rights Reserved.</p>
 
 	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">
