--- a/templates/projects/projectDetail.twig
+++ b/templates/projects/projectDetail.twig
@@ -16,14 +16,13 @@
 {% block body %}
 	<style>
 		.number-slide {
-			background: grey;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			font-size: 50px;
 			color: #fff;
 			font-weight: 500;
-			height: 60vh;
+			height: 30rem;
 			max-height: 100vh;
 		}
 
@@ -68,53 +67,42 @@
 		}
 
 		.arrow--left {
-			left: 5px;
+			left: 1.5rem;
 			fill: "#3caa8b";
-			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' %3E%3Cpath d='M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z' %3E%3C/path%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 24 24' %3E%3Cpath d='M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z' %3E%3C/path%3E%3C/svg%3E");
 		}
 
 		.arrow--right {
 			left: auto;
-			right: 5px;
-			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z'%3E%3C/path%3E%3C/svg%3E");
+			right: 1.5rem;
+			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 24 24' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z'%3E%3C/path%3E%3C/svg%3E");
 		}
 
 		.arrow--disabled.arrow--left {
-			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' fill='grey' viewBox='0 0 24 24' %3E%3Cpath d='M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z' %3E%3C/path%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 24 24' %3E%3Cpath d='M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z' %3E%3C/path%3E%3C/svg%3E");
 		}
 
 		.arrow--disabled.arrow--right {
-			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' fill='grey' viewBox='0 0 24 24' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z'%3E%3C/path%3E%3C/svg%3E");
+			background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 24 24' %3E%3Cpath d='M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z'%3E%3C/path%3E%3C/svg%3E");
 		}
 	</style>
 
 	<hr>
-	<div class="mx-3">
+	<div class="container mx-3">
 		<div class="card rounded-3 bg-dark">
 			<div class="card-header text-center bg-main-dark">
 				<h3>{{ project.name }}</h3>
 			</div>
 			<div class="card-body bg-dark row p-0 m-0 justify-content-center align-items-center" style="overflow: hidden;">
-				<div>
+				<div class="col-auto py-3">
 					{{ project.fileref|raw }}
 				</div>
-				<div id="my-keen-slider" class="keen-slider bg-dark">
-				{% for item in project.gallery %}
-					<div class="keen-slider__slide number-slide" style="aspect-ratio:0.5; background-image: url('{{ asset('uploads/gallery/' ~ item) }}'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
-				{% endfor %}
-					
+				<div id="my-keen-slider" class="keen-slider col-12 col-md-10" >
+					{% for item in project.gallery %}
+						<div class="keen-slider__slide number-slide bg-accent-dark rounded-4" style="aspect-ratio:0.5; background-image: url('{{ asset('uploads/gallery/' ~ item) }}'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
+					{% endfor %}
 				</div>
-
-				{% if project.linkref is not empty and project.linkref is not null %}
-				<a target="blank" href="{{project.linkref}}" class="col-auto my-4 py-2">
-					<button type="button" class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" data-bs-dismiss="modal">
-						<h5 class="p-0 m-0"> &nbsp;<i class="fa fa-file" aria-hidden="true"></i> Go to project! </h5>
-					</button>
-				</a>
-				{% endif %}
-
 				<script src="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.js"></script>
-				
 				<script>
 					function navigation(slider) {
 						let wrapper, dots, arrowLeft, arrowRight
@@ -141,9 +129,9 @@
 							removeElement(arrowRight)
 							return
 							}
-							arrowLeft = createDiv("arrow arrow--left")
+							arrowLeft = createDiv("arrow arrow--left p-2")
 							arrowLeft.addEventListener("click", () => slider.prev())
-							arrowRight = createDiv("arrow arrow--right")
+							arrowRight = createDiv("arrow arrow--right p-2")
 							arrowRight.addEventListener("click", () => slider.next())
 
 							wrapper.appendChild(arrowLeft)
@@ -205,8 +193,15 @@
 					}
 
 					var slider = new KeenSlider("#my-keen-slider", {loop: true,}, [navigation])
-
 				</script>
+
+				{% if project.linkref is not empty and project.linkref is not null %}
+				<a target="blank" href="{{project.linkref}}" class="col-auto my-4 py-2">
+					<button type="button" class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" data-bs-dismiss="modal">
+						<h5 class="p-0 m-0"> &nbsp;<i class="fa fa-file" aria-hidden="true"></i> Go to project! </h5>
+					</button>
+				</a>
+				{% endif %}
 			</div>
 		</div>
 
