--- a/templates/index/contact.twig
+++ b/templates/index/contact.twig
@@ -1,4 +1,4 @@
-<section id="contact" class="bg-accent-dark" style="min-height: 50vh;">
+<section id="contact" class="w-100 m-0 p-0 bg-accent-dark rounded-top-5" style="min-height: 50vh;">
 
     <div class="w-100 d-flex justify-content-center ">
 		<div class="bg-main rounded-4 col-12 col-md-6  py-2 d-flex justify-content-center" >
