--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,18 +25,17 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 		<!-- bootstrap
-				<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-				<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-				 -->
+								<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+								<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+								<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+								 -->
 
 		<!-- bootstrap 
-				<link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
-				<script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script> 
-				-->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css"/> 
-
-		<!-- sweetalert2 -->
+								<link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
+								<script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script> 
+								-->
+		<link
+		rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css"/> <!-- sweetalert2 -->
 		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.all.min.js"></script>
 
@@ -110,10 +109,11 @@ hideLoading(); // Hide the loading spinner after a short delay
 		<div class="w-100 p-0 mx-0" style="margin-top: 13vh;"> {% block body %}{% endblock %}
 
 			</div>
-
-			{% block foot %}
-				{% include 'index/footer.twig' with {'bg':' bg-transparent'} %}
-			{% endblock %}
+			<div class="bottom-0">
+				{% block foot %}
+					{% include 'index/footer.twig' with {'bg':' bg-transparent'} %}
+				{% endblock %}
+			</div>
 
 		</body>
 	</html>
