--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -19,5 +19,5 @@
 {% endblock %}
 
 {% block foot %}
-	{% include 'index/footer.twig' with {'bg':' bg-accent-dark'} %}
+	{% include 'footer.twig' with {'bg':' bg-accent-dark'} %}
 {% endblock %}
