--- a/templates/EventLoading/create_mileStone.twig
+++ b/templates/EventLoading/create_mileStone.twig
@@ -9,7 +9,7 @@
 {{ form_row(mileStoneForm.bulletpoints) }}
 
 <div class="d-flex justify-content-center my-2">
-	<button class="btn btn-primary" type="button" onclick="submitForm('{{path('milestone_new')}}', 'MilestoneContainer', 'mileStoneForm', '{{ asset('loadgif.gif') }}', {{mileStonecur.id}})">Create</button>
+	<button class="btn btn-primary" type="button" onclick="submitForm('{{ path('milestone_new', {'id': mileStonecur}) }}', 'MilestoneContainer', 'mileStoneForm', '{{ asset('loadgif.gif') }}')">Create</button>
 </div>
 
 {{ form_end(mileStoneForm) }}
