--- a/templates/timeline_cv/pdf.html.twig
+++ b/templates/timeline_cv/pdf.html.twig
@@ -1,4 +1,3 @@
-{# templates/timeline_cv/pdf.html.twig #}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,14 +6,20 @@
 		<style>
 			body {
 				font-family: Arial, sans-serif;
+				font-size: 13px;
+			}
+
+			.row {
+				text-align: center;
+				padding: 0.5rem !important;
 			}
 			.milestone {
-				margin-bottom: 20px;
+				margin-bottom: 2px;
 			}
 			.project,
 			.tag,
 			.bullet {
-				margin-left: 20px;
+				margin-left: 2px;
 			}
 			.clearfix::after {
 				content: "";
@@ -27,14 +32,29 @@
 			.right {
 				float: right;
 			}
+			.center {
+				background-color: #f0f0f0;
+				text-align: center;
+			}
+			.py-2 {
+				padding-top: 0.5rem !important;
+				padding-bottom: 0.5rem !important;
+			}
 		</style>
 	</head>
 	<body>
-		<h3>Rodolfo León Gasca - Computer Science Engineer</h3>
+		<h4>Rodolfo León Gasca - Computer Science Engineer</h4>
 
-        <p>rolega01@gmail.com |  55 4913 8324 | GitHub | LinkedIn | Portfolio</p>
+		<p>rolega01@gmail.com |  55 4913 8324 | GitHub | LinkedIn |
+			<a href="https://foundtexas.mx">Portfolio</a>
+		</p>
 
-        <p>I'm Rodolfo, computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.</p>
+		<p>I'm Rodolfo, computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.</p>
+
+		<div class="row py-2">
+			<strong>Experience</strong>
+		</div>
+
 		{% for id, milestone in timeline_events %}
 			<div class="milestone clearfix">
 				<div class="clearfix">
@@ -46,7 +66,9 @@
 					<p class="left">{{ milestone.name }}</p>
 
 					<div class="right">
-						<p >{{ milestone.startDate|date('Y-m-d') }} - {{ milestone.endDate ? milestone.endDate|date('Y-m-d') : 'Current'}}</p>
+						<p>{{ milestone.startDate|date('Y-m-d') }}
+							-
+							{{ milestone.endDate ? milestone.endDate|date('Y-m-d') : 'Current'}}</p>
 					</div>
 				</div>
 
