--- a/templates/timeline_cv/pdf.html.twig
+++ b/templates/timeline_cv/pdf.html.twig
@@ -1,94 +1,111 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>CV</title>
-		<style>
-			body {
-				font-family: Arial, sans-serif;
-				font-size: 13px;
-			}
+<head>
+    <meta charset="UTF-8">
+    <title>CV</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 13px;
+        }
 
-			.row {
-				text-align: center;
-				padding: 0.5rem !important;
-			}
-			.milestone {
-				margin-bottom: 2px;
-			}
-			.project,
-			.tag,
-			.bullet {
-				margin-left: 2px;
-			}
-			.clearfix::after {
-				content: "";
-				clear: both;
-				display: table;
-			}
-			.left {
-				float: left;
-			}
-			.right {
-				float: right;
-			}
-			.center {
-				background-color: #f0f0f0;
-				text-align: center;
-			}
-			.py-2 {
-				padding-top: 0.5rem !important;
-				padding-bottom: 0.5rem !important;
-			}
-		</style>
-	</head>
-	<body>
-		<h4>Rodolfo León Gasca - Computer Science Engineer</h4>
+        .container {
+            width: 100%;
+        }
 
-		<p>rolega01@gmail.com |  55 4913 8324 | GitHub | LinkedIn |
-			<a href="https://foundtexas.mx">Portfolio</a>
-		</p>
+        .header, .footer {
+            text-align: center;
+        }
 
-		<p>I'm Rodolfo, computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.</p>
+        .content {
+            width: 100%;
+            display: table;
+            clear: both;
+        }
 
-		<div class="row py-2">
-			<strong>Experience</strong>
-		</div>
+        .row {
+            width: 100%;
+            clear: both;
+            padding: 0 0;
+        }
 
-		{% for id, milestone in timeline_events %}
-			<div class="milestone clearfix">
-				<div class="clearfix">
-					<strong class="left">{{ milestone.organization }}</strong>
-					<p class="right">{{ milestone.location }}</p>
-				</div>
+        .left {
+            float: left;
+            width: 49%;
+        }
 
-				<div class="clearfix">
-					<p class="left">{{ milestone.name }}</p>
+        .right {
+            float: right;
+            width: 49%;
+            text-align: right;
+        }
 
-					<div class="right">
-						<p>{{ milestone.startDate|date('Y-m-d') }}
-							-
-							{{ milestone.endDate ? milestone.endDate|date('Y-m-d') : 'Current'}}</p>
-					</div>
-				</div>
+        .center {
+            text-align: center;
+            width: 100%;
+        }
 
-				<ul class="bullets">
-					{% for bullet in milestone.bullets %}
-						<li class="bullet">
-							<p>{{ bullet }}</p>
-						</li>
-					{% endfor %}
-				</ul>
+        .p-0 {
+            padding: 0 !important;
+        }
 
-				<div class="tags">
-					<h3>Tags:</h3>
-					{% for tag in milestone.tags %}
-						<div class="tag">
-							<p>{{ tag }}</p>
-						</div>
-					{% endfor %}
-				</div>
-			</div>
-		{% endfor %}
-	</body>
+        .m-0 {
+            margin: 0 !important;
+        }
+
+        ul {
+            padding-left: 2rem !important;
+        }
+
+        ul li {
+            margin-bottom: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h3>Rodolfo León Gasca - Computer Science Engineer</h3>
+        </div>
+
+        <p class="center">
+            <a href="mailto:rolega01@gmail.com">rolega01@gmail.com</a> |
+            +52 55 4913 8324 |
+            <a href="https://github.com/FoundTexas?tab=repositories">GitHub</a> |
+            <a href="https://www.linkedin.com/in/rodolfo-le%C3%B3n-13a10a236/">LinkedIn</a> |
+            <a href="https://foundtexas.mx">Portfolio</a>
+        </p>
+
+        <p>I'm Rodolfo, a computer scientist specialized in 3D Graphics, with skills in Project Management, Web and Game Development. I’m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for users.</p>
+
+        <div class="row center">
+            <strong>Education</strong>
+        </div>
+
+        <div class="row center">
+            <strong>Experience</strong>
+        </div>
+
+        {% for id, milestone in timeline_events %}
+        <div class="row">
+            <strong class="left">{{ milestone.organization }}</strong>
+            <div class="right">{{ milestone.location }}</div>
+        </div>
+
+        <div class="row">
+            <div class="left">{{ milestone.name }}</div>
+            <div class="right">
+                {{ milestone.startDate|date('Y-m-d') }} - {{ milestone.endDate ? milestone.endDate|date('Y-m-d') : 'Current'}}
+            </div>
+        </div>
+
+        <ul class="row">
+            {% for bullet in milestone.bullets %}
+            <li>{{ bullet }}</li>
+            {% endfor %}
+        </ul>
+        {% endfor %}
+
+    </div>
+</body>
 </html>
